spade-tests/src/snapshots/spade_tests__ast_lowering__negative_stage_index.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Reference to negative pipeline stage
  ┌─ testinput:2:17
  │
2 │         let a = stage(-1).x;
  │                 ^^^^^^^^^ This references a negative pipeline stage
  │
  = note: Since this is at stage 0, stage(-1) references stage -1
  = note: Pipeline stages start at 0


